...
                                fontWeight: FontWeight.w400,
                              ),
                            ),
                            FadeAnimation(
                              1.8,
                              GestureDetector(
                                key: Key("signup"),
                                onTap: () {
                                  Navigator.push(
                                      context,
                                      MaterialPageRoute(
                                          builder: (context) =>
                                              RegisterScreen()));
...
