...
                      color: Colors.grey[400],
                      borderRadius: BorderRadius.all(
                        Radius.circular(8.0),
                      ),
                    ),
                    child: InkWell(
                      key: Key("addImage"),
                      onTap: () {
                        showModalBottomSheet(
                          context: context,
                          builder: (context) => ImageUploader(
                            galleryOption:
                                context.read<ImageHelper>().getImageFromGallery,
...
