...
                              horizontal: 16, vertical: 10),
                          duration: Duration(milliseconds: 400),
                          tabBackgroundColor: Colors.lightBlue,
                          color: Colors.blue[400],
                          tabs: gButtons,
                          selectedIndex: screenViewModel.currentScreenIndex,
                          key: Key("buttonButton"),
                          onTabChange: (selectedScreenIndex) {
                            FocusScopeNode currentFocus =
                                FocusScope.of(context);

                            if (!currentFocus.hasPrimaryFocus) {
                              currentFocus.unfocus();
...
