...
    return Material(
      color: Color(0xff13293D),
      borderRadius: BorderRadius.all(
        Radius.circular(5),
      ),
      child: GestureDetector(
        key: Key("addtocart"),
        onTap: () {
          CartviewModel cartviewModel = context.read<CartviewModel>();
          cartviewModel.addToCartData != null
              ? cartviewModel.addToCartData.status == Status.LOADING
                  ? null
                  : addOrIncreaseItemQuantity(bookID, context)
...
