...
  @override
  Widget build(BuildContext context) {
    return Container(
      height: 80,
      padding: EdgeInsets.all(10),
      child: TextField(
        key:Key("searchField"),
        onTap: () => Navigator.push(
          context,
          MaterialPageRoute(builder: (context) => SearchPage()),
        ),
        readOnly: true,
        decoration: InputDecoration(
...
