...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      body: Container(
        key:Key("searchcontainer"),
        width: MediaQuery.of(context).size.width,
        height: MediaQuery.of(context).size.height,
        padding: EdgeInsets.all(2),
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
...
